<!DOCTYPE resources [
    <!ENTITY appname "Multiplayer Quiz">
    <!ENTITY author "shvmsaini">
    ]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="player1_name">Player 1</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="player2_name">Player 2</string>
    <string name="timer_icon">Timer Icon</string>
    <string name="skip">skip</string>
    <string name="stop">stop</string>
    <string name="starting_in_d">Starting in %1$d</string>
    <string name="challenge_now">Challenge Now</string>
    <string name="welcome">Welcome</string>
    <string name="multiplayer_quiz">&appname;!</string>
    <string name="to">to</string>
    <string name="picture">picture of player</string>
    <string name="results">Results</string>
    <string name="final_score">Final Score</string>
    <string name="share_results">Share Results</string>
    <string name="go_home">Go Home</string>
    <string name="crown_image">crown image</string>
    <string name="quiz_number">%1$d/%2$s</string>
    <string name="share">"Hi! I'm using &appname; app to play awesome multiplayer quiz. You should try!"</string>
    <string name="cancel">Cancel</string>
    <string name="exit_prompt">Are you sure you want to exit?</string>
    <string name="hero_image">Hero image</string>
    <string name="choose_an_app">Choose an app</string>
    <string name="loading_more_questions">Loading more questions...</string>
</resources>