<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="io.github.shvmsaini.superprocurequiz.viewmodels.ResultsFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/player_won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.player1Score &gt; viewModel.player2Score ? `Player 1 Won` : `Player 2 Won`}"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/players_photoLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/crown_p1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:visibility="invisible"
                    android:contentDescription="@string/crown_image"
                    android:src="@drawable/crown" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/player1_photoLayout"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:id="@+id/player1_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/avatar" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/crown_p2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:visibility="invisible"
                    android:src="@drawable/crown" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/player2_photoLayout"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:id="@+id/player2_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/picture"
                        android:src="@drawable/avatar" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/score_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/players_photoLayout">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/quiz_background"
                android:backgroundTint="@color/darkest_blue"
                android:minWidth="300dp"
                android:minHeight="100dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:id="@+id/player1_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="30dp"
                            android:text="@{viewModel.player1Score.toString()}"
                            android:textSize="40sp" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:text=":"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        tools:ignore="HardcodedText" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:id="@+id/player2_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="30dp"
                            android:text="@{viewModel.player2Score.toString()}"
                            android:textSize="40sp" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                android:backgroundTint="@color/secondary_blue"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/final_score"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_card">

            <Button
                android:id="@+id/share"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/button_style"
                android:backgroundTintMode="add"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/share_results"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/home"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/button_style"
                android:backgroundTintMode="add"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/go_home"
                android:textColor="@color/white"
                app:backgroundTint="@null" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>